# zscan

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
examples/: demo.py
src/zscan/: __init__.py  cli.py
src/zscan/core/: __init__.py  checks.py  metadata.py  rules.py
src/zscan/models/: __init__.py  schemas.py
src/zscan/utils/: __init__.py  logging.py
tests/: conftest.py  test_checks.py  test_metadata.py
