[project]
name = "zscan"
version = "0.1.0"
description = "Zero-scan data quality observability via Iceberg table metadata"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Fajar Alif", email = "fajaralif@icloud.com" }]
keywords = ["data-quality", "iceberg", "metadata", "observability", "zero-scan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyiceberg[sql-sqlite,pyarrow]>=0.9.0",
    "duckdb>=1.2.0",
    "pyarrow>=19.0.0",
    "pandas>=2.2.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=1.0.0",
    "pre-commit>=4.0.0",
    "mypy>=1.16.0",
]

[project.scripts]
zscan = "zscan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zscan"]

[tool.ruff]
target-version = "py314"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "ASYNC", # flake8-async
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "INT",  # flake8-gettext
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "TD",   # flake8-todos
    "FIX",  # flake8-fixme
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # perflint
    "FURB", # refurb
    "LOG",  # loguru
    "RUF",  # ruff-specific rules
]

ignore = [
    "FBT",     # Boolean-typed positional arguments (common in CLI/typer)
    "S101",    # assert in tests (expected)
    "PLR2004", # Magic values in tests
    "ANN001",  # Missing type annotations in tests
    "SLF001",  # Private member access in tests
    "BLE001",  # Blind exception (acceptable in CLI)
    "B904",    # raise from (can be too strict)
    "TRY301",  # Abstract raise
    "TC001",   # Type checking block imports
    "TC002",   # Third-party imports in type checking
    "ANN401",  # Any type
    "PERF401", # list.extend
    "F402",    # Import shadowing
    "PLC0415", # Import at top level
    "T201",    # print in examples
    "E501",    # Line too long (for prototype)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "SLF", "PLR2004", "FBT"]
"examples/*" = ["T201", "PLC0415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["zscan"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
